2010-02-26  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #13675: Performance improvement: Use array_walk() for t3lib_div::intExplode (Thanks to Georg Ringer)

2010-02-26  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #13262: replace hardcoded typo3/ with TYPO3_mainDir (Thanks to Georg Ringer)
	* Fixed bug #13591: Full search causes error if TCA has tables without any columns (Thanks to Fabrizio Branca)
	* Fixed bug #12849: Element wizard & web_list.allowedNewTables doesn't respect hiding pages (Thanks to Georg Ringer)
	* Fixed bug #13611: Replace calls to t3lib_div:: within t3lib_div to self:: due to performance reasons (Thanks to Georg Ringer)

2010-02-25  Francois Suter  <francois@typo3.org>

	* Fixed bug #12841: Menu Update broken in EM when Using translated Backend (thanks to Steffen Ritter)

2010-02-24  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #13470: Session/Login not working in IE8 across subdomains 

2010-02-24  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #13637: [EM] Upload to TER is broken

2010-02-23  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #13479: Jump to end of text when inserting paragraph

2010-02-23  Oliver Hader  <oliver@typo3.org>

	* Release of TYPO3 4.3.2

2010-02-23  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #13372: saltedpasswords - Authentication Bypass in frontend user authentication (thanks to Marcus Krause & Dmitry Dulepov)
	* Fixed bug #13394: Information disclosure in sysext:sys_actions (thanks to Georg Ringer)
	* Fixed bug #13042: XSS in index.php (thanks to Georg Ringer)
	* Fixed bug #11617: XSS in template module (thanks to Georg Ringer)
	* Fixed bug #13249: XSS in TS Object Browser (thanks to Marcus Krause)
	* Fixed bug #11621: XSS vulnerabilities in workspace module (thanks to Georg Ringer)
	* Fixed bug #11620: XSS vulnerability in task center module (thanks to Georg Ringer)
	* Fixed bug #12628: XSS in sysext sys_action (thanks to Georg Ringer)