@@ -4,6 +4,7 @@
 
 2010-02-26  Benjamin Mack  <benni@typo3.org>
 
+	* Fixed bug #13419: sys_action: Suggest wizard doesn't work with * as table (Thanks to Georg Ringer)
 	* Fixed bug #13262: replace hardcoded typo3/ with TYPO3_mainDir (Thanks to Georg Ringer)
 	* Fixed bug #13591: Full search causes error if TCA has tables without any columns (Thanks to Fabrizio Branca)
 	* Fixed bug #12849: Element wizard & web_list.allowedNewTables doesn't respect hiding pages (Thanks to Georg Ringer)
